# erpnext-client-rs

./: CLAUDE.md  Cargo.toml  README.md  tasks.nu
client/: Cargo.toml
client/src/: filter.rs  lib.rs
macro/: Cargo.toml
macro/src/: lib.rs
src/: lib.rs
