[package]
name = "erpnext_client"
version = "0.1.0"
edition = "2024"
description = "A simple API client for interacting with Frappe/ERPNext."
license = "MIT"

keywords = ["erp", "frappe", "api-client"]

[dependencies]
anyhow = "1.0.97"
reqwest = { version = "0.12.15", features = ["json"] }
secrecy = { version = "0.10.3", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tracing = "0.1.41"
