[package]
name = "erpnext_client"
version = "0.2.0"
edition = "2024"
description = "A simple API client for interacting with Frappe/ERPNext."
license = "MIT"
repository = "https://github.com/Selion05/erpnext-client-rs"
keywords = ["erpnext", "api-client"]

[dependencies]
anyhow = "1.0.97"
reqwest = { version = "0.12.15", features = ["json"] }
secrecy = { version = "0.10.3", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tracing = "0.1.41"
erpnext_client_macro = { version = "0.1.0", path = "../macro" }
urlencoding = "2.1.3"
