[package]
name = "erpnext_client_macro"
version = "0.1.0"
edition = "2024"
description = "Macros for erpnext_client"
license = "MIT"
repository = "https://github.com/Selion05/erpnext-client-rs"
[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full"]}
quote = "1"
proc-macro2 = "1"
